wip: fix visibility management for parent/children
Also, change caption to have the same DOM as browser, to make
CSS easier (and always targeting details element).

--- a/umap/static/umap/css/form.css
+++ b/umap/static/umap/css/form.css
@@ -353,6 +353,7 @@ details summary {
 
 summary h4 {
     display: inline;
+    margin-bottom: 0;
 }
 
 fieldset legend {
